--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <depend>tf2_eigen</depend>
   <depend>moveit_core</depend>
   <depend>moveit_task_constructor_core</depend>
   <depend>rviz_marker_tools</depend>
