add install rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,15 @@ target_link_libraries(${PROJECT_NAME}_baxter_demo
 	mtc_pour_into
 	${catkin_LIBRARIES}
 )
+
+install(TARGETS mtc_pour_into ${PROJECT_NAME}_tams_ur5_demo ${PROJECT_NAME}_baxter_demo
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+)
+
+install(DIRECTORY include
+  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION})
+
+install(DIRECTORY launch config meshes
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
